--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "nebojsa/composer-app",
     "require": {
-        "klein/klein": "^2.1"
+        "klein/klein": "^2.1",
+        "smarty/smarty": "~3.1"
     },
     "autoload": {
       "psr-4": {
